--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -34,11 +36,62 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
+    implementation "androidx.core:core-ktx:${versions.constraintlayout}"
+    implementation "androidx.appcompat:appcompat:${versions.constraintlayout}"
+    implementation "com.google.android.material:material:${versions.material}"
+    testImplementation "junit:junit:${versions.junit}"
+    androidTestImplementation "androidx.test.ext:junit:${versions.extjunit}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${versions.espressocore}"
+
+    /** Presentation */
+    implementation "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:${versions.swipeRefresh}"
+
+    /** Room */
+    implementation "androidx.room:room-runtime:${versions.room}"
+    kapt "androidx.room:room-compiler:${versions.room}"
+    implementation "androidx.room:room-ktx:${versions.room}"
+    implementation "androidx.room:room-rxjava2:${versions.room}"
+    implementation "androidx.room:room-common:${versions.room}"
+
+    /** OKHttp */
+    implementation "com.squareup.okhttp3:okhttp:${versions.okhttp}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}"
+
+    /** Retrofit */
+    implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
+    implementation "com.squareup.retrofit2:converter-moshi:${versions.retrofit}"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:${versions.retrofit}"
+
+    /** gson */
+    implementation "com.google.code.gson:gson:${versions.gson}"
+
+    /** Image Loading */
+    implementation "com.github.bumptech.glide:glide:${versions.glide}"
+
+    /** Annotation */
+    testImplementation "androidx.annotation:annotation:${versions.androidxAnnotations}"
+    androidTestImplementation "androidx.annotation:annotation:${versions.androidxAnnotations}"
+
+    /** Dagger 2 */
+    implementation "com.google.dagger:dagger:${versions.dagger}"
+    implementation "com.google.dagger:dagger-android:${versions.dagger}"
+    implementation "com.google.dagger:dagger-android-support:${versions.dagger}"
+    kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
+    kapt "com.google.dagger:dagger-android-processor:${versions.dagger}"
+    implementation "com.squareup.inject:assisted-inject-annotations-dagger2:${versions.assistedInject}"
+    kapt "com.squareup.inject:assisted-inject-processor-dagger2:${versions.assistedInject}"
+
+    /** Extensions */
+    implementation "androidx.lifecycle:lifecycle-extensions:${versions.archLifecycleExtensions}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.archLifecycleExtensions}"
+
+    /** Rx */
+    implementation "io.reactivex.rxjava2:rxandroid:${versions.rxandroid}"
+    implementation "io.reactivex.rxjava2:rxjava:${versions.rxjava}"
+    implementation "com.twistedequations.rx2:rx2-savestate:${versions.rx2Savestate}"
+    implementation "com.twistedequations.rx2:rx2-android-schedulers:${versions.rx2AandroidSchedulers}"
+    implementation "com.squareup.retrofit2:converter-gson:${versions.converterGson}"
+    implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:${versions.retrofit2Rxjava2Adapter}"
 }
