--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,43 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.10"
+    ext.versions = [
+            'gradle'                 : '4.1.0',
+            'kotlin'                 : "1.4.10",
+            'compileSdkVersion'      : 29,
+            'buildToolsVersion'      : "29.0.3",
+            'minSdkVersion'          : 25,
+            'targetSdkVersion'       : 29,
+            'constraintlayout'       : '2.0.4',
+            'swipeRefresh'           : '1.1.0',
+            'room'                   : '2.2.6',
+            'okhttp'                 : '4.9.0',
+            'retrofit'               : '2.9.0',
+            'gson'                   : '2.8.6',
+            'converter_gson'         : '2.9.0',
+            'glide'                  : '4.11.0',
+            'androidxAnnotations'    : '1.1.0',
+            'dagger'                 : '2.28.3',
+            'archLifecycleExtensions': '2.2.0',
+            'rxandroid'              : "2.1.1",
+            'rxjava'                 : "2.2.20",
+            "rx2Savestate"           : "2.0.2",
+            "rx2AandroidSchedulers"  : "2.0.0",
+            "converterGson"          : "2.9.0",
+            "retrofit2Rxjava2Adapter": "1.0.0",
+            'core-ktx'               : '1.3.2',
+            'appcompat'              : '1.2.0',
+            'material'               : '1.2.1',
+            'junit'                  : '4.13.1',
+            'extjunit'               : '1.1.2',
+            'espressocore'           : '3.3.0',
+    ]
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:${versions.gradle}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
     }
 }
 
