--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,9 @@ android {
 
 dependencies {
 
+    /** Kotlin*/
     implementation "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
-    implementation "androidx.core:core-ktx:${versions.constraintlayout}"
-    implementation "androidx.appcompat:appcompat:${versions.constraintlayout}"
-    implementation "com.google.android.material:material:${versions.material}"
+    implementation "androidx.core:core-ktx:${versions.corektx}"
 
     /** Junit*/
     testImplementation "junit:junit:${versions.junit}"
@@ -76,6 +75,8 @@ dependencies {
     /** Presentation */
     implementation "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:${versions.swipeRefresh}"
+    implementation "androidx.appcompat:appcompat:${versions.appcompat}"
+    implementation "com.google.android.material:material:${versions.material}"
 
     /** Room */
     implementation "androidx.room:room-runtime:${versions.room}"
@@ -109,7 +110,6 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:${versions.dagger}"
     kapt "com.google.dagger:dagger-compiler:${versions.dagger}"
     kapt "com.google.dagger:dagger-android-processor:${versions.dagger}"
-    kapt "com.squareup.inject:assisted-inject-processor-dagger2:${versions.assistedInject}"
 
     /** Extensions */
     implementation "androidx.lifecycle:lifecycle-extensions:${versions.archLifecycleExtensions}"
