--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ buildscript {
             "rx2AandroidSchedulers"  : "2.0.0",
             "converterGson"          : "2.9.0",
             "retrofit2Rxjava2Adapter": "1.0.0",
-            'core-ktx'               : '1.3.2',
+            'corektx'               : '1.3.2',
             'appcompat'              : '1.2.0',
             'material'               : '1.2.1',
             'junit'                  : '4.13.1',
@@ -53,10 +53,10 @@ allprojects {
     repositories {
         maven { url "https://www.jitpack.io" }
         maven { url 'https://maven.google.com' }
-        maven { url "http://dl.bintray.com/twistedequations/maven" }
-        maven {url = 'https://repo.maven.apache.org/maven2'}
         google()
         jcenter()
+        maven { url "http://dl.bintray.com/twistedequations/maven" }
+        maven {url = 'https://repo.maven.apache.org/maven2'}
     }
 }
 
